--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "team-reflex/discord-php",
+    "name": "elvalery/discord-php",
     "description": "An unofficial API to interact with the voice and text service Discord.",
     "license": "MIT",
     "authors": [
@@ -10,6 +10,10 @@
         {
             "name": "Aaron Scherer",
             "email": "aequasi@gmail.com"
+        },
+        {
+            "name": "Elena Voloshyna",
+            "email": "ebaklanova@gmail.com"
         }
     ],
     "require": {
